Updated the images

--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@
               Please enter valid email/mobile
             </div>
             <div class="social">
-              <a href="#" target="_blank">
-                <img src="assets/images/youtube.png" />
+              <a rel="nofollow" href="https://www.instagram.com/rkebike.in/" target="_blank">
+                <img src="assets/images/instagram.png" />
               </a>
-              <a href="#" target="_blank">
+              <a rel="nofollow" href="https://www.facebook.com/profile.php?id=100080922802299" target="_blank">
                 <img src="assets/images/fb.png" />
               </a>
               <a href="https://api.whatsapp.com/send?phone=919004044061" target="_blank">
@@ -201,14 +201,14 @@
           <a href="#book" class="enquiry-button">ENQUIRE NOW</a>
         </div>
         <div>
-          <img src="assets/images/offer-1.png" />
+          <img src="assets/images/offer-3.png" />
           <strong>
             Classic city
           </strong>
           <a href="#book" class="enquiry-button">ENQUIRE NOW</a>
         </div>
         <div>
-          <img src="assets/images/offer-2.png" />
+          <img src="assets/images/offer-4.png" />
           <strong>
             JET 320
           </strong>
@@ -279,69 +279,70 @@
           </p>
         </div>
         <div>
-          <strong>Abhishek Mestry</strong>
+          <strong>Pragati Shah</strong>
           <img src="assets/images/rating-star.png" />
           <img src="assets/images/rating-star.png" />
           <img src="assets/images/rating-star.png" />
           <img src="assets/images/rating-star.png" />
           <img src="assets/images/rating-star.png" />
           <p>
-            Excellent EBike , Good after sales services
+            Best quality scooter... <br/>
+            best deal first time in Navi Mumbai
           </p>
         </div>
         <div>
-          <strong>Abhishek Mestry</strong>
+          <strong>Ankit Jain</strong>
           <img src="assets/images/rating-star.png" />
           <img src="assets/images/rating-star.png" />
           <img src="assets/images/rating-star.png" />
           <img src="assets/images/rating-star.png" />
           <img src="assets/images/rating-star.png" />
           <p>
-            Excellent EBike , Good after sales services
+            Service quality is good
           </p>
         </div>
         <div>
-          <strong>Abhishek Mestry</strong>
+          <strong>Sunny Mehta</strong>
           <img src="assets/images/rating-star.png" />
           <img src="assets/images/rating-star.png" />
           <img src="assets/images/rating-star.png" />
           <img src="assets/images/rating-star.png" />
           <img src="assets/images/rating-star.png" />
           <p>
-            Excellent EBike , Good after sales services
+            Best customer support on time support
           </p>
         </div>
         <div>
-          <strong>Abhishek Mestry</strong>
+          <strong>Rashmi Patil</strong>
           <img src="assets/images/rating-star.png" />
           <img src="assets/images/rating-star.png" />
           <img src="assets/images/rating-star.png" />
           <img src="assets/images/rating-star.png" />
           <img src="assets/images/rating-star.png" />
           <p>
-            Excellent EBike , Good after sales services
+            Excellent safest bike
           </p>
         </div>
         <div>
-          <strong>Abhishek Mestry</strong>
+          <strong>Remo Desilva</strong>
           <img src="assets/images/rating-star.png" />
           <img src="assets/images/rating-star.png" />
           <img src="assets/images/rating-star.png" />
           <img src="assets/images/rating-star.png" />
           <img src="assets/images/rating-star.png" />
           <p>
-            Excellent EBike , Good after sales services
+            Very nice efficient bike
           </p>
         </div>
         <div>
-          <strong>Abhishek Mestry</strong>
+          <strong>Sajid Shaikh</strong>
           <img src="assets/images/rating-star.png" />
           <img src="assets/images/rating-star.png" />
           <img src="assets/images/rating-star.png" />
           <img src="assets/images/rating-star.png" />
           <img src="assets/images/rating-star.png" />
           <p>
-            Excellent EBike , Good after sales services
+            Good service....Paisa vassol
           </p>
         </div>
       </div>
@@ -376,11 +377,11 @@
         <div class="footer-top">
           <img src="assets/images/logo.png" />
             <div class="social">
-              <a href="#">
+              <a href="https://api.whatsapp.com/send?phone=919004044061" target="_blank">
                 <img src="assets/images/whatsapp.png" />
               </a>
               <a href="#">
-                <img src="assets/images/youtube.png" />
+                <img src="assets/images/instagram.png" />
               </a>
               <a href="#">
                 <img src="assets/images/fb.png" />
